# karp-sketch

./: .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/api/: server.py
backend/app/api/routes/: __init__.py  resources.py
backend/app/core/: config.py  tasks.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 5bb29472d33f_init_db.py
backend/app/db/repositories/: resources.py
backend/app/models/: core.py  resource.py
backend/tests/: conftest.py  test_resource.py
