[tool.poetry]
name = "karp-backend"
version = "0.1.0"
description = ""
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
databases = "^0.5.4"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
PyMySQL = { version = "^0.9", optional = true }
aiomysql = { version = "^0.0.22", optional = true }
aiosqlite = { version = "^0.17", optional = true }
sqlalchemy-json = "^0.4.0"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.extras]
mysql = ["PyMySQL", "aiomysql"]
sqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
httpx = "^0.21.3"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
